# automated-semver-backend

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
api/: __init__.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py
